# app

./: .gitignore  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml  code-quality.yml  smokeshow.yml  test.yml
app/: main.py  utils.py
app/ui/: connect_to_server.py
confy/: __main__.py  labels.py  qss.py  utils.py
confy/core/: constants.py
confy/ui/: __init__.py  chat.py  connect_to_server.py  connect_to_user.py
docs/: communication.md
scripts/: images.sh
tests/: confy.py  test_connect_to_server.py
